player/static/css/index.css
/* Boostrap */

body {
    background-color: #F1F1F1
}

.navbar {
    border-radius: 0px;
    padding-left: 5px;
    padding-right: 5px;
}

.navbar-collapse.collapse {
    display: block !important;
}
.navbar-nav>p, .navbar-nav>a, .navbar-nav {
    float: left !important;
}
.navbar-right {
    float: right !important;
}

.messages {
    list-style: none;
    padding-left: 20px;
    padding-right: 20px;
}

.row {
    padding-top: 30px;
}

hr {
    margin-top: 30px;
    margin-bottom: 30px;
}

.footer {
    position: absolute;
    bottom: 0;
    width: 100%;
    height: 60px;
    line-height: 60px;
}

/* YouTube */

.video-container {
    position: relative;
    padding-bottom: 56.25%;
    padding-top: 30px;
    height: 0;
    overflow: hidden;
}

.video-container iframe, .video-container object, .video-container embed {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
}

/* Custom */

.btn-login {
    background-color: #db1f12;
    color: #f1f1f1 !important;
}
.btn-login:hover {
    color: #000000 !important;
}

.btn-logout {
    background-color: #b01205;
    color: #e2e2e2 !important;
}
.btn-logout:hover {
    color: #000000 !important;
}
@media (max-width: 768px) {
    .navbar-text {
        /* TODO: This hack is needed because the navbar changes size.*/
        padding-right: 20px;
    }
}

.compass {
    position: relative;
    text-align: center;
    float: left;
}
.compass-image {
    height: 150px;
    padding-left: 5px;
    padding-right: 5px;
}
.compass-text {
    position: absolute;
    left: 0;
    top: 55px;
    width: 100%;
}

.current-song {
    height: 150px;
    display: flex;
    justify-content: flex-end;
    text-align: right;
    align-items: center;
    font-size: 16px;
}

.song-queue>li {
    padding-bottom: 15px;
    font-size: 16px;
}

